<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:hint="@string/ET_numero"
        android:inputType="number" />
    <EditText
        android:id="@+id/editTextName"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNumber"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:hint="@string/ET_nombre"
        android:inputType="textPersonName" />
    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:ems="10"
        android:hint="@string/ET_dirección"/>
    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:layout_below="@id/editTextAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:hint="@string/ET_teléfono"/>
    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@id/editTextPhone"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:hint="@string/ET_correo"/>
    <Button
        android:id="@+id/Agregar"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTextEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#607D8B"
        android:text="@string/BT_agregar"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/BuscarClienteNumero"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/Agregar"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#607D8B"
        android:text="@string/BT_bucarclienteNum"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/BuscarClienteNombre"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BuscarClienteNumero"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#607D8B"
        android:text="@string/BT_buscarclienteNom"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />
    <Button
        android:id="@+id/BorrarCliente"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/BuscarClienteNombre"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:background="#607D8B"
        android:text="@string/BT_borracliente"
        android:textColor="@android:color/white"
        android:textSize="13sp"
        android:textStyle="bold" />
</RelativeLayout>